# carbide

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
backends/carbide_cosmic_text/: Cargo.toml
backends/carbide_cosmic_text/src/: font.rs  lib.rs  metadata.rs  text_cache.rs  text_context.rs
backends/carbide_example_shared/: Cargo.toml
backends/carbide_example_shared/src/: lib.rs
backends/carbide_fluent/: Cargo.toml
backends/carbide_fluent/examples/: localized_datetime.rs  localized_number.rs  localized_string.rs
backends/carbide_fluent/src/: args.rs  lib.rs  locale_ext.rs  localizable.rs  localized_datetime.rs  localized_number.rs  localized_string.rs
backends/carbide_gfx/: Cargo.toml
backends/carbide_gfx/examples/: all_winit_gfx.rs
backends/carbide_gfx/src/: lib.rs
backends/carbide_glium/: Cargo.toml
backends/carbide_glium/examples/: all_winit_glium.rs  all_winit_glium_threaded.rs  canvas.rs  counter.rs  file_navigator.rs  graph.rs  hello_world.rs  hello_world_2.rs  image.rs  image_button.rs  list.rs  list_select.rs  old_custom_widget.rs  old_demo.rs  plot_path.rs  primitives.rs  range_slider.rs  text.rs  text_edit.rs  triangles.rs
backends/carbide_glium/src/: lib.rs  window.rs
backends/carbide_icons/: Cargo.toml  README.md
backends/carbide_icons/examples/: lucide.rs  remix.rs  tabler.rs
backends/carbide_icons/src/: lib.rs
backends/carbide_macos/: Cargo.toml
backends/carbide_macos/examples/: color_dialog.rs  color_panel.rs  font_manager_tests.rs  open_dialog.rs  open_panel.rs  save_dialog.rs  save_panel.rs
backends/carbide_macos/src/: array.rs  id.rs  lib.rs  menu.rs  menu_item.rs  string.rs  url.rs
backends/carbide_printpdf/: Cargo.toml
backends/carbide_printpdf/examples/: rectangle.rs
backends/carbide_printpdf/src/: image_context.rs  lib.rs  page_layout.rs  pdf.rs  render_context.rs
backends/carbide_rend3/: Cargo.toml
backends/carbide_rend3/examples/: cube.rs
backends/carbide_rend3/src/: lib.rs  node3d.rs  scene3d.rs
backends/carbide_rendy/: Cargo.toml
backends/carbide_rusttype/: Cargo.toml  README.md
backends/carbide_text/: Cargo.toml
backends/carbide_vulkano/: Cargo.toml
backends/carbide_wgpu/: Cargo.toml  build.rs
backends/carbide_wgpu_3d/: Cargo.toml
backends/carbide_windows/: Cargo.toml
backends/carbide_winit/: Cargo.toml
backends/conrod_glium/: Cargo.toml
carbide/: Cargo.toml
carbide/examples/: animate_on_click.rs  cursors.rs  dialog_popup.rs  dialogs.rs  fractal.rs  match.rs  match_example.rs  syntax.rs  ui.rs
carbide/src/: lib.rs
carbide_3d/: Cargo.toml
carbide_3d/examples/: scene3d.rs  scene3d_dolly.rs  scene3d_normals.rs  scene3d_test.rs
carbide_3d/ressources/: renderball.mtl
carbide_3d/src/: handedness.rs  image_context3d.rs  lib.rs  mesh.rs  node3d.rs  node3d_sequence.rs  object.rs  render3d.rs  render_context3d.rs  scene3d.rs  sorting.rs  transform.rs  vertex.rs
carbide_chart/: Cargo.toml
carbide_chart/examples/: chart.rs  chart_circle.rs
carbide_chart/src/: chart.rs  lib.rs
carbide_controls/: Cargo.toml
carbide_controls/examples/: button.rs  calendar.rs  check_box.rs  color_picker.rs  context_menu.rs  date_picker.rs  focus_behavior.rs  foreach_identifiable.rs  help.rs  labelled.rs  list.rs  list_add_remove.rs  list_content.rs  list_new.rs  list_selectable_multiple.rs  list_selectable_multiple2.rs  list_selectable_single.rs  list_selectable_single2.rs  list_styled.rs  multi_selectable_list.rs  navigation_stack.rs  obscure_textfield.rs  picker.rs  plain_button.rs  plain_calendar.rs  plain_check_box.rs  plain_date_picker.rs  plain_pop_up.rs  plain_pop_up_button.rs  plain_radio_button.rs  plain_slider.rs  plain_switch.rs  plain_text_input.rs  pop_up_button.rs  radio_button.rs  show_text_on_press.rs  single_selectable_list.rs  slider.rs  switch.rs  test.rs  (+3 more)
carbide_controls/src/: automatic_style.rs  button.rs  calendar.rs  check_box.rs  controls_ext.rs  date_picker.rs  help.rs  labelled.rs  lib.rs  list.rs  list_new.rs  navigation_stack.rs  old_slider.rs  pop_up_button.rs  radio_button.rs  slider.rs  switch.rs  text_input.rs  toggle_style.rs
carbide_core/: Cargo.toml
carbide_core/src/: color.rs  cursor.rs  event_handler.rs  flags.rs  image_map.rs  label.rs  lib.rs  locate_folder.rs  prelude.rs  scene.rs  text.rs  text_old.rs  ui.rs  utils.rs  window.rs
carbide_core/tests/: color.rs  global_input.rs  mod.rs  ui.rs  widget_input.rs
carbide_derive/: Cargo.toml
carbide_derive/src/: a.rs  closure.rs  common.rs  derive_type.rs  identifiable.rs  lib.rs  state.rs  state_value.rs  style.rs  utils.rs  widget.rs  widget_builder.rs
carbide_dialogs/: Cargo.toml
carbide_dialogs/examples/: color_dialog.rs  open_dialog.rs  save_dialog.rs
carbide_dialogs/src/: dialogs_ext.rs  file_type.rs  lib.rs
carbide_macro/: Cargo.toml
carbide_macro/src/: carbide_expr.rs  carbide_expression.rs  carbide_gen_optionals.rs  carbide_item.rs  carbide_struct.rs  children_params.rs  constructor_params.rs  dollar_pre_processor.rs  expr_ident_extraction.rs  field.rs  ident_extraction.rs  lib.rs  pat_ident_extraction.rs  ui.rs  util.rs  value.rs  widget_binding.rs  widget_block.rs  widget_expr.rs  widget_expr_for.rs  widget_expr_if.rs  widget_node.rs  widget_root.rs  widget_stmt.rs
carbide_media/: Cargo.toml
carbide_media/examples/: video.rs  video_player.rs
carbide_media/src/: lib.rs  video_player.rs
carbide_syn/: Cargo.toml
carbide_syn/src/: attr.rs  buffer.rs  custom_keyword.rs  custom_punctuation.rs  discouraged.rs  error.rs  expr.rs  ext.rs  file.rs  generics.rs  group.rs  item.rs  lib.rs  lifetime.rs  lit.rs  lookahead.rs  mac.rs  meta.rs  op.rs  parse.rs  parse_macro_input.rs  parse_quote.rs  pat.rs  path.rs  punctuated.rs  spanned.rs  stmt.rs  token.rs  ty.rs  verbatim.rs
conrod_core/: Cargo.toml
conrod_core/src/: border.rs  color.rs  cursor.rs  event.rs  event_handler.rs  flags.rs  image.rs  label.rs  lib.rs  mesh.rs  prelude.rs  text.rs  theme.rs  ui.rs  utils.rs  window.rs
conrod_core/tests/: color.rs  global_input.rs  mod.rs  ui.rs  widget_input.rs
(+1247 files in other folders)
