[workspace]
resolver = "2"
members = [
    "carbide_core",
    "carbide_macro",
    "carbide_controls",
    "carbide_derive",
    "carbide_media",
    "carbide_syn",
    #"backends/carbide_example_shared",
    "backends/carbide_winit",
    # "backends/carbide_gfx",
    #"backends/carbide_glium",
    # "backends/carbide_piston",
    # "backends/carbide_rendy",
    # "backends/carbide_vulkano",
    "backends/carbide_wgpu",
    "backends/carbide_wgpu_3d",
    "backends/carbide_windows",
    "backends/carbide_rend3",
    "backends/carbide_text",
    "backends/carbide_macos",
    "backends/carbide_printpdf",
    "backends/carbide_fluent",
    "examples/lines",
    "examples/hacker_news",
    "examples/calculator",
    "examples/counter",
    "examples/fractal",
    "examples/mandelbrot",
    "examples/othello",
    "examples/drawing_paths_and_shapes",
    "carbide",
    "carbide_3d",
    "carbide_chart",
]

[workspace.package]
version = "0.72.0"
edition = "2021"
repository = "https://github.com/HolgerGottChristensen/carbide.git"

[workspace.dependencies]
dyn-clone = "1.0.5"
chrono = "0.4"
cgmath = "0.18"
raw-window-handle = "0.5"
lyon = { path = "../Repositories/lyon/crates/lyon" }
dashmap = "5.5.3"
once_cell = "1.19.0"
wgpu = "0.16.1"
bitflags = "2.4.0"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
include_dir = "0.7.4"
rand = "0.8.5"
accesskit = { path = "../Repositories/accesskit/common" }
accesskit_winit = { path = "../Repositories/accesskit/platforms/winit" }
smallvec = "1.13.2"
winit = { version = "0.30.5", features = ["rwh_05"] }
proc-macro-crate = "3.2.0"
indexmap = "2.6.0"
