[workspace]
resolver = "2"
members = [
    "carbide_core",
    "carbide_macro",
    "carbide_controls",
    "carbide_derive",
    "carbide_media",
    "carbide_syn",
    "backends/carbide_winit",
    "backends/carbide_wgpu",
    "backends/carbide_wgpu_3d",
    "backends/carbide_windows",
    "backends/carbide_cosmic_text",
    "backends/carbide_printpdf",
    "backends/carbide_lyon",
    "backends/carbide_fluent",
    "examples/lines",
    "examples/hacker_news",
    "examples/calculator",
    "examples/counter",
    "examples/fractal",
    "examples/mandelbrot",
    "examples/othello",
    "examples/drawing_paths_and_shapes",
    "carbide",
    "carbide_3d",
    "carbide_chart",
    "carbide_dialogs",
]

[workspace.package]
version = "0.72.0"
edition = "2021"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
authors = [
    "Holger Gott Christensen"
]

[workspace.dependencies]
accesskit = "0.17.1"
accesskit_winit = "0.23.1"
bitflags = "2.4.0"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
carbide_derive = { path = "carbide_derive", version = "0.72.0" }
carbide_macro = { path = "carbide_macro", version = "0.72.0" }
cgmath = { version = "0.18", features = ["mint"] }
chrono = "0.4"
console_error_panic_hook = "0.1.7"
console_log = "1"
dashmap = "6.1.0"
dyn-clone = "1.0.5"
futures = "0.3"
image = "0.25.5"
include_dir = "0.7.4"
indexmap = "2.6.0"
once_cell = "1.19.0"
parking_lot = "0.12.3"
proc-macro-crate = "3.2.0"
rand = { version = "0.9.0" }
raw-window-handle = "0.5"
smallvec = "1.13.2"
typed-arena = "2.0.2"
walkdir = "2.4.0"
web-time = "1.1.0"
wgpu = { version = "25", features = ["fragile-send-sync-non-atomic-wasm"] }
winit = { version = "0.30", features = ["rwh_05"] }

