[package]
name = "carbide"
version = "0.70.1"
authors = ["Holger Gott Christensen <hoch@itu.dk>"]
edition = "2021"
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
description = "A crate that includes the other carbide crates and where features can be selected"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["carbide_wgpu", "carbide_macro"]
controls = ["carbide_controls"]


[dependencies]
carbide_core = { path = "../carbide_core", version = "0.70", features = ["tokio"] }
carbide_macro = { path = "../carbide_macro", version = "0.1.0", optional = true }
carbide_controls = { path = "../carbide_controls", version = "0.70", optional = true }
carbide_wgpu = { path = "../backends/carbide_wgpu", version = "0.70", optional = true }

[dev-dependencies]
carbide_controls = { path = "../carbide_controls", version = "0.70" }