[package]
name = "carbide"
version = { workspace = true }
authors = ["Holger Gott Christensen <holger.gott@icloud.com>"]
edition = "2021"
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
categories = ["gui"]
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
description = "A crate that includes the other carbide crates and where features can be selected"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["carbide_wgpu", "carbide_macro", "carbide_core/tokio"]
controls = ["carbide_controls"]
media = ["carbide_media"]
i18n = ["carbide_fluent"]

[dependencies]
carbide_core = { path = "../carbide_core" }
carbide_macro = { path = "../carbide_macro", optional = true }
carbide_controls = { path = "../carbide_controls", optional = true }
carbide_wgpu = { path = "../backends/carbide_wgpu", optional = true }
carbide_media = { path = "../carbide_media", optional = true }
carbide_fluent = { path = "../backends/carbide_fluent", optional = true}

[dev-dependencies]
carbide_controls = { path = "../carbide_controls" }