[package]
name = "carbide_3d"
version.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carbide_core = { path = "../carbide_core" }
dashmap.workspace = true
once_cell.workspace = true
bitflags.workspace = true
dyn-clone.workspace = true
tobj = "4.0.2"
downcast-rs = "1.2.1"

[dev-dependencies]
carbide_wgpu = { path = "../backends/carbide_wgpu" }
carbide_wgpu_3d = { path = "../backends/carbide_wgpu_3d" }
