[package]
name = "carbide_controls"
version = "0.70.1"
authors = [
    "Holger Gott Christensen <holger.gott@icloud.com>",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "A set of control widgets for the carbide core crate"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["gui"]
edition = "2021"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"

[dependencies]
carbide_macro = { path = "../carbide_macro" }
carbide_core = { path = "../carbide_core", version = "0.70" }
copypasta = "0.8.1"
unicode-segmentation = "1.7.1"
serde = "1.0.118"
dyn-clone = "1.0.3"

[dev-dependencies]
env_logger = "0.7"
carbide_wgpu = { path = "../backends/carbide_wgpu" }
futures = "0.3"