[package]
name = "carbide_core"
version = "0.70.1"
authors = [
    "Holger Gott Christensen <holger.gott@icloud.com>",
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]
edition = "2021"
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["macro"]
macro = ["carbide_macro"]

[dependencies]
raw-window-handle.workspace = true
carbide_derive = { path = "../carbide_derive", version = "0.70" }
carbide_macro = { path = "../carbide_macro", version = "0.1.0", optional = true }
rand = "0.8.5"
bitflags = "2.4.0"
dyn-clone.workspace = true
parking_lot = "0.12.1"
smallvec = "1"

lyon = "1.0.1"
fxhash = "0.2.1"
nom = "7.1.1"
image = "0.24.2"
cgmath.workspace = true
futures = "0.3.21"
oneshot = "0.1.3"

async-std = { version = "1.10.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

[dev-dependencies]
# font-kit = "0.10.1"