[package]
name = "carbide_core"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors = [
    "Holger Gott Christensen",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]
resolver = "2"

[package.metadata.docs.rs]
all-features = true

[features]
default = ["macro"]
macro = ["carbide_macro"]

[dependencies]
carbide_derive = { path = "../carbide_derive" }
carbide_macro = { path = "../carbide_macro", optional = true }
bitflags.workspace = true
dyn-clone.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
indexmap.workspace = true
cgmath.workspace = true
web-time.workspace = true

accesskit.workspace = true
image.workspace = true
fxhash = "0.2.1"
futures.workspace = true
oneshot = "0.1.3"

async-std = { version = "1.13.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

