[package]
name = "carbide_core"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors = [
    "Holger Gott Christensen",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["macro"]
macro = ["carbide_macro"]

[dependencies]
carbide_derive.workspace = true
carbide_macro = { workspace = true, optional = true }
carbide_usvg.workspace = true

bitflags.workspace = true
cgmath.workspace = true
dyn-clone.workspace = true
indexmap.workspace = true
parking_lot.workspace = true
smallvec.workspace = true
url.workspace = true
web-time.workspace = true
dashmap.workspace = true

accesskit.workspace = true
image.workspace = true
fxhash = "0.2.1"
futures.workspace = true
oneshot = "0.1.3"
gif = "0.14.1"
gif-dispose = "6.0.0"

async-std = { version = "1.13.0", optional = true }
tokio = { version = "1", features = ["full"], optional = true }

