[package]
name = "carbide_derive"
version = { workspace = true }
authors = ["Holger Gott Christensen <holger.gott@icloud.com>"]
description = "A crate providing procedural macros for the carbide library"
license = "MIT OR Apache-2.0"
keywords = ["carbide", "gui", "derive", "procedural", "macro"]
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
carbide_syn = { path = "../carbide_syn", features = ["extra-traits", "full", "fold"] }
