[package]
name = "carbide_derive"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors = [
    "Holger Gott Christensen",
]
description = "A crate providing procedural macros for the carbide library"
license = "MIT OR Apache-2.0"
keywords = ["carbide", "gui", "derive", "procedural", "macro"]
homepage = "https://github.com/HolgerGottChristensen/carbide"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
carbide_syn = { path = "../carbide_syn", features = ["extra-traits", "full", "fold"] }
paste = "1.0.15"
proc-macro-crate.workspace = true
