[package]
name = "carbide_dialogs"
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
carbide_core = { path = "../carbide_core" }
carbide_winit = { path = "../backends/carbide_winit" }
raw-window-handle.workspace = true
oneshot = "0.1.3"
futures = "0.3.21"

[target.'cfg(target_os="macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = { version = "0.2.2", features = ["NSThread"] }
objc2-app-kit = { version = "0.2.2", features = ["all"] }
objc2-uniform-type-identifiers = { version = "0.2.2", features = ["all"] } # Can be removed when https://github.com/madsmtm/objc2/milestone/6 is on crates
block2 = "0.5.1"
dyn-clone.workspace = true

[dev-dependencies]
carbide_wgpu = { path = "../backends/carbide_wgpu" }
carbide_core = { path = "../carbide_core", features = ["tokio"] }
carbide_controls = { path = "../carbide_controls" }