[package]
name = "carbide_macro"
version = "0.70.1"
authors = ["Holger Gott Christensen <holger.gott@icloud.com>"]
description = "A crate providing procedural macros for the carbide library"
license = "MIT OR Apache-2.0"
keywords = ["carbide", "gui", "derive", "procedural", "macro"]
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = ["extra-traits", "full"] }
