[package]
name = "carbide_media"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors = [
    "Holger Gott Christensen <holger.gott@icloud.com>",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "A set of media widgets for the carbide core crate"
license = "MIT OR Apache-2.0"
readme = "../README.md"
categories = ["gui"]
homepage = "https://github.com/HolgerGottChristensen/carbide"

[dependencies]
carbide_derive = { path = "../carbide_derive" }
carbide_core = { path = "../carbide_core" }
objc = "0.2.7"
cocoa = "0.25.0"
lazy_static = "*"
bitflags = "2.4.0"

[dev-dependencies]
carbide_wgpu = { path = "../backends/carbide_wgpu" }
