[package]
name = "conrod_core"
version = "0.70.0"
authors = [
    "Mitchell Nordine <mitchell.nordine@gmail.com>",
    "Sven Nilsen <bvssvni@gmail.com>"
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../README.md"
repository = "https://github.com/pistondevelopers/conrod.git"
homepage = "https://github.com/pistondevelopers/conrod"
categories = ["gui"]
edition="2018"

[package.metadata.docs.rs]
all-features = true

[features]
stdweb = [ "instant/stdweb" ]
wasm-bindgen = [ "instant/wasm-bindgen" ]

[dependencies]
conrod_derive = { path = "../conrod_derive", version = "0.70" }
daggy = "0.5"
fnv = "1.0"
num = "0.2"
pistoncore-input = "1.0.0"
rusttype = { version = "0.8", features = ["gpu_cache"] }
instant = "0.1"
copypasta = "0.6"
rand = "0.7"
uuid = { version = "0.8.1", features = ["serde", "v4"]}
bitflags = "1.2.1"
dyn-clone = "1.0.3"
serde = "1.0.118"
ron = "0.6.2"
derivative = "2.1.1"
wgpu = "0.6"
bytemuck = { version = "1.4", features = [ "derive" ] }