[package]
name = "carbide_cosmic_text"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors = [
    "Holger Gott Christensen",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carbide_core = { path = "../../carbide_core" }
fxhash = "0.2.1"
cosmic-text = "0.10.0"
swash = "0.1.8"
unicode-segmentation = "1.7.1"
include_dir = { workspace = true, features = ["glob"]}