[package]
name = "carbide_example_shared"
version = "0.70.0"
authors = ["mitchmindtree <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "A small crate for sharing common code between carbide examples."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/pistondevelopers/carbide.git"
homepage = "https://github.com/pistondevelopers/carbide"
categories = ["gui"]

[dependencies]
carbide_core = { path = "../../carbide_core", version = "0.70" }
rand = "0.7"
