[package]
name = "carbide_fluent"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carbide_core = { path = "../../carbide_core" }
fluent = { path = "../../../Repositories/fluent-rs/fluent" }
intl-memoizer = { path = "../../../Repositories/fluent-rs/intl-memoizer" }
lazy_static = "1.4.0"
icu = "1.2.0"
walkdir = "2.4.0"
chrono = "0.4.30"
dyn-clone.workspace = true

[dev-dependencies]
carbide_wgpu = { path = "../carbide_wgpu" }
carbide_controls = { path = "../../carbide_controls", features = ["carbide_fluent"] }