[package]
name = "carbide_gfx"
version = "0.70.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]

[lib]
name = "carbide_gfx"
path = "./src/lib.rs"

[dependencies]
carbide_core = { path = "../../carbide_core", version = "0.70" }
gfx = { version = "0.18" }
gfx_core = { version = "0.9" }

[dev-dependencies]
carbide_example_shared = { path = "../carbide_example_shared", version = "0.70" }
carbide_winit = { path = "../carbide_winit", version = "0.70" }
find_folder = "0.3.0"
image = "0.22"
petgraph = "0.4"
## glutin_gfx.rs example dependencies
gfx_window_glutin = "0.31"
glutin = "0.21"
winit = "0.19"
