[package]
name = "carbide_glium"
version = "0.70.0"
authors = ["Mitchell Nordine <mitchell.nordine@gmail.com>"]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]

[lib]
name = "carbide_glium"
path = "./src/lib.rs"

[dependencies]
carbide_core = { path = "../../carbide_core", version = "0.70" }
glium = "0.24"
carbide_winit = { path = "../carbide_winit", version = "0.70" }
winit = "0.19"
find_folder = "0.3.0"
image = "0.22"
uuid = { version = "0.8.1", features = ["serde", "v4"]}

[dev-dependencies]
carbide_example_shared = { path = "../carbide_example_shared", version = "0.70" }

petgraph = "0.4"
rand = "0.7"

