[package]
name = "carbide_icons"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
include_dir.workspace = true

[dev-dependencies]
carbide_core.workspace = true
carbide_wgpu = { workspace = true, features = ["icons"] }

[features]
default = []
lucide = []
tabler = []
remix = []

[[example]]
name = "lucide"
required-features = ["lucide"]

[[example]]
name = "remix"
required-features = ["remix"]

[[example]]
name = "tabler"
required-features = ["tabler"]
