[package]
name = "carbide_macos"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carbide_core = { path = "../../carbide_core", version = "0.70" }
raw-window-handle = "0.4.2"
block = "0.1.6"
cocoa = "0.24.0"
objc = "0.2.7"
core-graphics = "0.22.0"
foreign-types = "0.3.2"
lazy_static = "*"
oneshot = "0.1.3"
futures = "0.3.21"

[dev-dependencies]
carbide_wgpu = { path = "../carbide_wgpu", version = "0.70" }
carbide_core = { path = "../../carbide_core", features = ["tokio"] }