[package]
name = "carbide_printpdf"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
carbide_core = { path = "../../carbide_core" }
carbide_derive = { path = "../../carbide_derive" }
printpdf = { git = "https://github.com/HolgerGottChristensen/printpdf", features = ["embedded_images"]}