[package]
name = "carbide_rend3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rend3 = { git = "https://github.com/BVE-Reborn/rend3.git", rev = "4d10795"}
rend3-routine = { git = "https://github.com/BVE-Reborn/rend3.git", rev = "4d10795"}
carbide_wgpu = { path = "../carbide_wgpu", version = "0.70" }
