[package]
name = "carbide_rend3"
version = { workspace = true }
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rend3 = { git = "https://github.com/BVE-Reborn/rend3.git", rev = "ed38b90a57ce62a2d90dc6b23309446ec0585e8c"}
rend3-routine = { git = "https://github.com/BVE-Reborn/rend3.git", rev = "ed38b90a57ce62a2d90dc6b23309446ec0585e8c"}
carbide_core = { path = "../../carbide_core" }
wgpu.workspace = true
futures = "0.3.21"
image = "0.23"
carbide_wgpu = { path = "../carbide_wgpu" }
uuid = { version = "1.4.1", features = ["v4"] }
dyn-clone = "1.0.5"
