[package]
name = "carbide_vulkano"
version = "0.70.0"
authors = [
    "mitchmindtree <mitchell.nordine@gmail.com>",
    "Kurble",
    "Abendstolz",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "An easy-to-use, 100% Rust, extensible 2D GUI library."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]
edition = "2021"

[dependencies]
carbide_core = { path = "../../carbide_core", version = "0.70" }
vulkano = "0.16"
vulkano-shaders = "0.16"

[dev-dependencies]
carbide_example_shared = { path = "../carbide_example_shared", version = "0.70" }
carbide_winit = { path = "../carbide_winit", version = "0.70" }
find_folder = "0.3"
image = "0.22"
vulkano-win = "0.16"
winit = "0.19"
