[package]
name = "carbide_wgpu"
version = "0.70.1"
authors = [
    "Holger Gott Christensen <holger.gott@icloud.com>",
]
keywords = ["ui", "widgets", "gui", "interface", "graphics"]
description = "A crate to assist with rendering carbide UIs via wgpu."
license = "MIT OR Apache-2.0"
readme = "../../README.md"
repository = "https://github.com/HolgerGottChristensen/carbide.git"
homepage = "https://github.com/HolgerGottChristensen/carbide"
categories = ["gui"]
edition = "2021"

[dependencies]
carbide_core = { path = "../../carbide_core", version = "0.70" }
carbide_winit = { path = "../carbide_winit", version = "0.70" }
carbide_text = { path = "../carbide_text" }
cgmath = "0.18"
env_logger = "0.7"
log = "0.4"
wgpu = { version = "0.16.1" }
futures = "0.3"
bytemuck = { version = "1.7", features = ["derive", "min_const_generics"] }
anyhow = "1.0"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
raw-window-handle = "0.5"
walkdir = "2.4.0"
#smaa = "0.4.0"

[target.'cfg(target_os="macos")'.dependencies]
carbide_macos = { path = "../carbide_macos", version = "0.1.0"}
block = "0.1.6"
cocoa = "0.24.0"
objc = "0.2.7"
core-graphics = "0.22.0"
foreign-types = "0.3.2"

[dev-dependencies]
carbide_winit = { path = "../carbide_winit", version = "0.70" }
carbide_controls = { path = "../../carbide_controls" }
carbide_macro = { path = "../../carbide_macro" }
futures = "0.3"
async-std = { version = "1.10.0" }
surf = { version = "2.3" }
tokio = { version = "1", features = ["full"] }
reqwest = "0.11.22"
chrono = "0.4.31"


[[example]]
name = "async"
required-features = ["carbide_core/async-std"]

[[example]]
name = "async_tokio"
required-features = ["carbide_core/tokio"]
